--- a/code_hash/code_hash.tex
+++ b/code_hash/code_hash.tex
@@ -11,5 +11,5 @@
 \begin{document}
 \maketitle
 \paragraph{Yellowpaper Notation}: $N/A$
-\paragraph{Description}: The State Transition Function 
+\paragraph{Description}: The Keccak-256 bit hash of the empty string. The code hash aspect of an account’s state is the hash of the evm code of this account. Code hashes are stored in the state database. Code hashes are permanent and they are executed when the address belonging to that account receives a message call. 
 \end{document}
