--- a/state_transition_function/state_transition_function.tex
+++ b/state_transition_function/state_transition_function.tex
@@ -5,11 +5,11 @@
 \usepackage{amssymb}
 \usepackage{makeidx}
 \usepackage{graphicx}
-% \author{Micah Dameron}
+\author{Micah Dameron}
 \title{State Transition Function}
 \date{}
 \begin{document}
 \maketitle
-\paragraph{Yellowpaper Notation}: $\Upsilon$
+\paragraph{Notation}: $\Upsilon$
 \paragraph{Description}: The State Transition Function 
 \end{document}
