--- a/account_creation/account_creation.tex
+++ b/account_creation/account_creation.tex
@@ -5,11 +5,22 @@
 \usepackage{amssymb}
 \usepackage{makeidx}
 \usepackage{graphicx}
+\usepackage[
+	authordate,
+	strict,
+	backend=biber
+]
+{biblatex-chicago}
 % \author{Micah Dameron}
-\title{Byte Sequence}
+\title{Account Creation}
 \date{}
+\addbibresource{~/modules/References.bib}
 \begin{document}
 \maketitle
-\paragraph{Notation}: $N/A$
-\paragraph{Description}:  
+\paragraph{Notation}: \texttt{AC}
+\paragraph{Description}: 
+\par
+
+
 \end{document}
+
