--- a/account_creation/account_creation.tex
+++ b/account_creation/account_creation.tex
@@ -18,7 +18,8 @@
 \begin{document}
 \maketitle
 \paragraph{Notation}: \texttt{AC}
-\paragraph{Description}: 
+\paragraph{Description}: %Account creation definitively accours in the YP with contract creation. Does account creation also apply to regular account creation, or does it only apply to contract accounts? Also, what about protocol accounts? 
+\paragraph{Related}: \texttt{init}
 \par
 
 
