--- a/bit/bit.tex
+++ b/bit/bit.tex
@@ -1,4 +1,4 @@
-[10pt,a4paper,oneside]{scrartcl}
+\documentclass[10pt,a4paper,oneside]{scrartcl}
 \usepackage[latin1]{inputenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -14,13 +14,12 @@
 {biblatex-chicago}
 \usepackage{mathtools}
 \author{}
-\title{Total Difficulty}
+\title{Bit}
 \date{}
 \addbibresource{~/modules/References.bib}
 \begin{document}
 \maketitle
-\paragraph{Notation}: \textit{$B_t$} or block\_difficulty
-\paragraph{Description}: The \textit{Total Difficulty} of a block is defined recursively by a function which calculates the difficulty of all blocks prior to the header in the present block. 
-
+\paragraph{Notation}: \texttt{bit}
+\paragraph{Description}: The smallest unit of electronic data storage: there are eight bits in one byte. The Yellowpaper makes certain values appear bigger by giving them in bits (e.g. 160 bits instead of 20 bytes.)
 \end{document}
 
