--- a/contract/contract.tex
+++ b/contract/contract.tex
@@ -1,4 +1,4 @@
-[10pt,a4paper,oneside]{scrartcl}
+\documentclass[10pt,a4paper,oneside]{scrartcl}
 \usepackage[latin1]{inputenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -14,13 +14,13 @@
 {biblatex-chicago}
 \usepackage{mathtools}
 \author{}
-\title{Total Difficulty}
+\title{Contract}
 \date{}
 \addbibresource{~/modules/References.bib}
 \begin{document}
 \maketitle
-\paragraph{Notation}: \textit{$B_t$} or block\_difficulty
-\paragraph{Description}: The \textit{Total Difficulty} of a block is defined recursively by a function which calculates the difficulty of all blocks prior to the header in the present block. 
+\paragraph{Notation}: \texttt{contract}
+\paragraph{Description}: A piece of EVM Code that may be associated with an Account or an Autonomous Object. 
 
 \end{document}
 
