--- a/ethereum_browser/ethereum_browser.tex
+++ b/ethereum_browser/ethereum_browser.tex
@@ -14,13 +14,13 @@
 {biblatex-chicago}
 \usepackage{mathtools}
 \author{}
-\title{}
+\title{Ethereum Browser}
 \date{}
 \addbibresource{~/modules/References.bib}
 \begin{document}
 \maketitle
-\paragraph{Notation}: \texttt{ERE}
-\paragraph{Description}: The environment under which an Autonomous Object executes in the EVM: the EVM runs as a part of this environment.  
+\paragraph{Notation}: 
+\paragraph{Description}: A cross-platform GUI of an interface similar to a standard web browser that is able to host applications, the backend of which is purely on the Ethereum protocol.  
 
 \end{document}
 
