--- a/gas/gas.tex
+++ b/gas/gas.tex
@@ -14,13 +14,13 @@
 {biblatex-chicago}
 \usepackage{mathtools}
 \author{}
-\title{}
+\title{Gas}
 \date{}
 \addbibresource{~/modules/References.bib}
 \begin{document}
 \maketitle
-\paragraph{Notation}: \texttt{ERE}
-\paragraph{Description}: The environment under which an Autonomous Object executes in the EVM: the EVM runs as a part of this environment.  
+\paragraph{Notation}: \texttt{gas}
+\paragraph{Description}: The fundamental network cost unit converted to and from Ether as needed to complete the transaction while it is sent. Gas is arbitrarily determined at the moment it is needed, by the block and according to the miners decision to charge certain fees.
 
 \end{document}
 
