--- a/lll/lll.tex
+++ b/lll/lll.tex
@@ -1,4 +1,4 @@
-[10pt,a4paper,oneside]{scrartcl}
+\documentclass[10pt,a4paper,oneside]{scrartcl}
 \usepackage[latin1]{inputenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -14,13 +14,13 @@
 {biblatex-chicago}
 \usepackage{mathtools}
 \author{}
-\title{Total Difficulty}
+\title{Lower-Level Lisp}
 \date{}
 \addbibresource{~/modules/References.bib}
 \begin{document}
 \maketitle
-\paragraph{Notation}: \textit{$B_t$} or block\_difficulty
-\paragraph{Description}: The \textit{Total Difficulty} of a block is defined recursively by a function which calculates the difficulty of all blocks prior to the header in the present block. 
+\paragraph{Notation}: \texttt{LLL}
+\paragraph{Description}: The Lisp-Like low level language: a human-writable language used for authoring simple contracts and general low-level language for trans-compiling to. 
 
 \end{document}
 
