--- a/globules/globules.tex
+++ b/globules/globules.tex
@@ -295,12 +295,15 @@ Thanks to the founders of Ethereum for creating a product worth writing about in
 	  Readers of the Yellowpaper are compelled to split their time and attention between the desire to understand the content and their need to become fluent with the new formal alphabet the content is written in. This would not be so much of a problem if \textit{formalisms} Yellowpaper were limited to necessarily formal statements, but they are not. Formalisms are expanded and increased to the point that there are multiple tiers of equations, all in this same new alphabet, that are supposed to explain each other and the finer details of the Ethereum Protocol at the same time. The problem is that once again the reader's attention is split. This lack of clarity contributes to a skepticism about Ethereum in general, and deters many potential adopters from the platform. Therefore, there is a need for a firmer integration between the technical \textsl{facts} of the Ethereum platform and the \textsl{challenges} its developers must face in light of those facts.
 \par
 
-	  In this paper, we aim to make formal descriptions semantically obvious by invoking a procedurally correct pseudocode, saving time and effort for the reader by using concepts they already know, rather than using a customized formal alphabet, that by its author's own admission is ``quite particular to the present work"\autocite{Wood2017}. Not only does this make for easier reading, but coupled with a brief description it can make
+	  In this paper, we aim to make formal descriptions semantically obvious by invoking a procedurally correct pseudocode, saving time and effort for the reader by using concepts they already know, rather than using a customized formal alphabet. In cases where formal proofs use well-established and widely understood standards from Mathematics and Computer Science, we capitulate to those standards where necessary, and take some measures to draw them out for the reader.  
 %---PAGE SETUP---%
 \begin{multicols}{2}
 \justify
+	\section{Introduction}
 
-	\section{Introduction}Over the past decade, blockchain technology has proven its longevity and veracity through a number of systems, most notably through Bitcoin, the first electronic currency of its kind to succeed. While the \textbf{Bitcoin Protocol} has been successful in its endeavor to create currency using Blockchain technology, we propose the \textbf{Ethereum Protocol} which expands on this simple \textsl{currency application} application by creating a \textit{globally-distributed virtual machine} with shared memory using Blockchain technology. Relying on concepts from parallel computing, such as:
+	Ethereum is a decentralized virtual machine that is accessible to anyone and yet not owned by anyone. The crypto-economic rules of Ethereum stipulate, through thoughtful \textit{mechanism-design}, the conditions under which interaction with the network is possible. The rules of the protocol, which are set out in this paper, revolve around a cryptographically-secured consensus mechanism that ensures fair conduct (conduct that is in line with the rules) is contracted and enforced on the network. 
+
+	This paper, covering different topics (globules) about Ethereum, recognizes a need to integrate the disparate fields which are at play in Ethereum's operation and unify them under one or more common headings. This is the second part of a joint project, the first part (modules) covering the establishment of accurate and well-sourced modular documentation for each of Ethereum's different aspects, and located here: https://www.github.com/chronaeon/modules.git.
 
 
 1. \texttt{message-passing} \par
