--- a/References.bib
+++ b/References.bib
@@ -10,6 +10,17 @@
 	commit = {b14c975a3152e2312735fd0f93b838a16161bc25}
 }
 
+@misc{Buterin2017,
+	author = {Vitalik Buterin},
+	title  = {Pyethereum Source},
+	year = {2017},
+	publisher= {GitHub},
+	journal = {GitHub repository},
+	howpublished = {\url{https://www.github.com/ethereum/pyethereum/ethereum/opcodes.py}},
+	commit = {fd70d67ea91a021376fe13c819b2203bad2d3cd2}
+}
+
+
 @paper{Wood2017,
 	author = {Dr. Gavin Wood},
 	title = {Ethereum: A Secure Decentralised Generalised Transaction Ledger },
