deleted:    template.tex

--- a/low-level/opcodes/opcodes.tex
+++ b/low-level/opcodes/opcodes.tex
@@ -23,7 +23,7 @@
 
 
 \texttt{%
-	\begin{longtable}{r r c l l} \supercite{Buterin2017}
+	\begin{longtable}{r r c l l} \supercite{Buterin2017} \supercite{Wood2017}
 \textbf{Memory Register} & \textbf{Opcode} & \textbf{Gas}  & \textbf{Ins}  & \textbf{Outs}  \\
 0x00 & STOP & 0 & 0 & 0 \\
 0x01 & ADD & 3 & 2 & 1 \\
