renamed:    temp/template.tex -> template.tex

--- a/template.tex
+++ b/template.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt,a4paper,oneside]{scrartcl}
+\documentclass[9pt,a4paper,oneside]{scrartcl}
 \usepackage[latin1]{inputenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -10,15 +10,26 @@
 	   style=ieee
 	   ]
 	   {biblatex}
+\usepackage[a4paper,width=170mm,top=18mm,bottom=22mm,includeheadfoot]{geometry}
 \usepackage{mathtools}
+\usepackage{concmath}
+\usepackage[T1]{fontenc}
 \author{}
-\title{#NAME#}
+\title{Title}
 \date{}
 \addbibresource{~/modules/References.bib}
 \begin{document}
 \maketitle
-\paragraph{Notation}: #NOTATION#
-\paragraph{Description}: #DESCRIPTION#
+\paragraph{Notation}: NOTATIO
+\paragraph{Description}: DESCRIPTION
+
+Sleek 
+Agile
+Sophisticated
+Makes me feel smart to read and understand it
+Places me historically somewhere important and revolutionary
+Highly technical, but still conversational
+Letting you in on a big secret: how DLT works
 
 \printbibliography
 \end{document}
